--- a/android/res/xml/config.xml
+++ b/android/res/xml/config.xml
@@ -23,11 +23,11 @@
     Domains are assumed blocked unless set otherwise
      -->
 
-    <access origin="http://127.0.0.1*"/> <!-- allow local pages -->
+    <!-- <access origin="http://127.0.0.1*"/> allow local pages -->
 
     <!-- <access origin="https://example.com" /> allow any secure requests to example.com -->
     <!-- <access origin="https://example.com" subdomains="true" /> such as above, but including subdomains, such as www -->
-    <!-- <access origin=".*"/> Allow all domains, suggested development use only -->
+    <access origin=".*"/> <!-- Allow all domains, suggested development use only -->
 
     <log level="DEBUG"/>
     <preference name="useBrowserHistory" value="false" />
