--- a/android/assets/www/css/insthumbor.css
+++ b/android/assets/www/css/insthumbor.css
@@ -4,6 +4,7 @@ body {
 h1 {
     color: rgba(255, 255, 255, 0.8);
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
+    font-size: 24px;
     font-family: cursive;
 }
 menu {
